Fixed tiny buttons being unreadable due to antialiasing

--- a/app/assets/stylesheets/_ui.css.scss
+++ b/app/assets/stylesheets/_ui.css.scss
@@ -12,6 +12,10 @@
 .button {
 	position: relative;
 	margin-right: 1em;
+	&.tiny {
+		-webkit-font-smoothing: subpixel-antialiasing;
+		-moz-osx-font-smoothing: auto;
+	}
 }
 
 // Customize Foundation to suit Rails' flash notices
